fix overflow box 3 & 4 on large magnification
when the zoon in the browser is above 175%, these boxes overflow.

make box 3 & 4 bigger – should be re-done based on `rem` in the future?

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -795,7 +795,7 @@ footer ul {
     }
 
     #learn-list .color-cover {
-      max-height: 100vh;
+      max-height: 130vh;
     }
 
     #learn-list .p-cont {
@@ -803,7 +803,7 @@ footer ul {
     }
 
     #success .color-cover {
-      max-height: 60vh;
+      max-height: 80vh;
     }
 
     #success .p-cont,
@@ -883,14 +883,6 @@ footer ul {
 
     #frustrated .color-cover {
       max-height: 30vh;
-    }
-
-    #learn-list .color-cover {
-      max-height: 70vh;
-    }
-
-    #success .color-cover {
-      max-height: 40vh;
     }
 
     /* About section */
